ezyplot-x1/force-app/main/default/objects/Land_Registry_ownership__c/Land_Registry_ownership__c.object-meta.xml
<CustomObject>
    <label>Land Registry ownership</label>
    <nameField>
        <label>Property Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Land Registry ownerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>