ezyplot-x1/force-app/main/default/objects/Land_Registry_ownership__c/fields/Additional_Proprietor_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Additional_Proprietor_Indicator__c</fullName>
    <label>Additional Proprietor Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>