ezyplot-x1/force-app/main/default/objects/Land_Registry_ownership__c/fields/Company_Registration_No_3__c.field-meta.xml
<CustomField>
    <fullName>Company_Registration_No_3__c</fullName>
    <label>Company Registration No. (3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>