ezyplot-x1/force-app/main/default/objects/Land_Registry_ownership__c/fields/Country_Incorporated_2__c.field-meta.xml
<CustomField>
    <fullName>Country_Incorporated_2__c</fullName>
    <label>Country Incorporated (2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>