ezyplot-x1/force-app/main/default/objects/Land_Registry_ownership__c/fields/Date_Proprietor_Added__c.field-meta.xml
<CustomField>
    <fullName>Date_Proprietor_Added__c</fullName>
    <label>Date Proprietor Added</label>
    <type>Date</type>
</CustomField>