ezyplot-x1/force-app/main/default/objects/Land_Registry_ownership__c/fields/Multiple_Address_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Address_Indicator__c</fullName>
    <label>Multiple Address Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>