ezyplot-x1/force-app/main/default/objects/Land_Registry_ownership__c/fields/Proprietor_2_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Proprietor_2_Address_1__c</fullName>
    <label>Proprietor (2) Address (1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>