ezyplot-x1/force-app/main/default/objects/Land_Registry_ownership__c/fields/Proprietorship_Category_2__c.field-meta.xml
<CustomField>
    <fullName>Proprietorship_Category_2__c</fullName>
    <label>Proprietorship Category (2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>