ezyplot-x1/force-app/main/default/objects/Land_Registry_ownership__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <label>Tenure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>