ezyplot-x1/force-app/main/default/objects/Land_Registry_ownership__c/fields/Title_Number__c.field-meta.xml
<CustomField>
    <fullName>Title_Number__c</fullName>
    <label>Title Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>